--- a/.github/workflows/sync-images-dockerHub-example.yml
+++ b/.github/workflows/sync-images-dockerHub-example.yml
@@ -17,13 +17,13 @@ jobs:
   syncimages:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout Repos
+    - name: 检查仓库
       uses: actions/checkout@v3
       
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2.9.1
+    #- name: Set up Docker Buildx
+    #  uses: docker/setup-buildx-action@v2.9.1
 
-    - name: Login to Docker Hub
+    - name: 登录个人 DockerHub
       uses: docker/login-action@v2.2.0
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
